--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ a {
   text-decoration: none;
 }
 
+html,body{
+
+  min-height: 100%;
+}
+
 body {
   font-family: "Poppins", sans-serif;
 
@@ -61,6 +66,14 @@ body {
   justify-content: flex-end;
 }
 
+.header-menu{
+  display: none;
+}
+.header-menu .material-symbols-outlined{
+  
+  color: #fff;
+}
+
 .header-logo {
   /* Vector */
   position: static;
@@ -78,8 +91,16 @@ body {
   font-size: 14px;
   font-weight: 300;
   text-align: left;
-}
+  transition: .2s all ease-in-out;
 
+
+}
+.header-nav__link:hover {
+  color: rgb(255, 255, 255);
+  transform: scale(1.1);
+
+  
+}
 .header-btn__link {
   display: inline-block;
   border: 0;
@@ -101,6 +122,15 @@ body {
   font-size: 14px;
   font-weight: 600;
   text-align: left;
+  transition: .2s all ease-in-out;
+
+
+
+}
+
+.header-btn__link:hover {
+transform: translateY(-3px);
+
 }
 
 .main {
@@ -141,7 +171,15 @@ body {
   font-weight: 600;
   padding: 16px 32px;
   min-width: 239px;
+  transition: .2s all ease-in-out;
+
 }
+
+.btn-learn:hover{
+
+  transform: scale(1.1);
+}
+
 
 .loader {
   margin-top: 64px;
@@ -151,3 +189,103 @@ body {
   gap: 32px;
   justify-content: center;
 }
+
+#header-icon{
+  display: none;
+}
+
+
+@media screen and (max-width: 990px){
+
+
+  .header-btn{
+
+    display: none;
+  }
+
+  .main{
+
+    padding: 50px 20px;
+  }
+
+  .title{
+
+    font-size: 40px;
+    
+  }
+
+  .desc{
+
+    margin-bottom: 40px;
+  }
+
+  .loader{
+
+    margin-top: 30px;
+  }
+  
+}
+
+@media screen and (max-width: 770px){
+
+
+  .header-nav{
+    position: fixed;
+    width: 70%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.85);
+    flex-direction: column;
+    align-items: center;
+    transition: .2s all ease-in-out;
+    transform: translateX(-120%);
+
+  }
+
+ 
+  #header-icon:checked ~ .header-nav{
+
+    transform: translateX(0);
+
+
+  }
+
+  .header-btn{
+    display: flex;
+    transition: 0.2s all ease-in-out;
+    position: fixed;
+    bottom: 300px;
+    left: calc(50% - 15%);
+    transform: translateX(-50%) scale(0);
+  }
+  #header-icon:checked ~ .header-btn{
+
+ 
+    
+    transform: translateX(-50%) scale(1);
+
+
+  }
+
+  .header-nav__link{
+    color: #fff;
+  }
+
+  .header-menu{
+    display: flex;
+  }
+  
+}
+
+@media screen and (max-width: 590px){
+
+
+  body, .header{
+    padding: 20spx;
+  }
+
+  
+}
+
+
